<resources>
    <string name="app_name">BeautyLife</string>
    <string name="登录">登录</string>
    <string name="注册">注册</string>
    <string name="其他登录方式">— 其他登录方式 —</string>
    <string name="忘记密码">忘记密码</string>
    <string name="还没有账号">还有账号？快来注册～</string>
    <string name="请输入用户名">请输入用户名</string>
    <string name="请输入邮箱">请输入邮箱</string>
    <string name="请输入密码">请输入密码</string>
    <string name="请再次输入密码">请再次输入密码</string>
    <string name="最in试色">最in试色</string>
    <string name="视频">视频</string>
    <string name="资讯">资讯</string>
    <string name="更多">更多</string>
    <string name="Type">Type something</string>
    <string name="搜索">搜索</string>
    <string name="title">标题</string>
    <string name="info">简介</string>
    <string name="name">用户名</string>
    <string name="num">666</string>
    <string name="search_hint">输入品牌、色号、肤色等关键字</string>
    <string name="主页">主页</string>
    <string name="试色草原">试色草原</string>
    <string name="种草视频">种草视频</string>
    <string name="热门资讯">热门资讯</string>
    <string name="品牌汇总">品牌汇总</string>
    <string name="积分问答">积分问答</string>
    <string name="综合排序">综合排序</string>
    <string name="最新发布">最新发布</string>
    <string name="最多点击">最多点击</string>
    <string name="最多点赞">最多点赞</string>
    <string name="最多收藏">最多收藏</string>
    <string name="姓名">姓名</string>
    <string name="个人标签">个人标签</string>
    <string name="色号">色号：</string>
    <string name="色号样例">lady bug</string>
    <string name="内容">内容</string>
    <string name="查看全部">查看全部</string>
    <string name="搜索问题">搜索问题</string>
    <string name="我要提问">我要提问</string>
    <dimen name="space">8dp</dimen>
</resources>
